@@ -4,6 +4,7 @@
     * Implementation of print after upload endpoint
     * Minimal suported firmware is 3.10.0
     * Sort files directory first, newest first
+    * Faster checking and processing when uploading gcode
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
